--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <title>Linux Fest Demo</title>
 <body>
-<p> This is a simple demo website</p>
+<p> This is a simple demo website
+For a linuxfest demo video</p>
 </body>
 </html>
