--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,6 @@
 <title>Linux Fest Demo</title>
 <body>
 <p> This is a simple demo website
-For a linuxfest demo</p>
+For a linuxfest demo vid</p>
 </body>
 </html>
