--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<title>Linux Fest Demo</title>
+<title>Linux Fest Demo Video</title>
 <body>
 <p> This is a simple demo website
 For a linuxfest demo video!</p>
