commit for demo video

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <title>Linux Fest Demo Video</title>
 <body>
 <p> This is a simple demo website
-For a linuxfest demo video!</p>
+For a linuxfest demo video!
+This will deploy automatically!</p>
 </body>
 </html>
