--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,6 @@
 <p> This is a simple demo website
 For a linuxfest demo video!
 This will deploy automatically!</p>
+<p><h1>AUTOMAGICALLY</h1></p>
 </body>
 </html>
